invisible display names should be fixed.

--- a/public/styles/dashboard_style.css
+++ b/public/styles/dashboard_style.css
@@ -794,8 +794,10 @@ text-align: center;
   text-transform: none;
   overflow: hidden;
   white-space: nowrap;
+  padding-right: 18px;
   line-height: 43px;
   font-size: 15px;
+  width: calc(100% - 57px);
   max-width: 100%;
   margin: 0px;
   color: #aaaaaa !important;
@@ -1556,9 +1558,11 @@ text-align: center;
 .participantCard{
   margin: 10px;
   display: inline-block;
+  position: relative;
   border-radius: 4px;
   height: 55px;
   width: 240px;
+  overflow: hidden;
   background-color: var(--tournamentCardColor);
   cursor: pointer;
   transition-duration: 0.15s;
@@ -1579,13 +1583,13 @@ text-align: center;
 }
 
 .participantCardName{
-  display: table-cell;
-  height: 55px;
+  display: inline-block;
+  line-height: 55px;
+  max-width: calc(100% - 55px);
+  overflow-wrap: break-word;
   vertical-align: middle;
   margin:0px;
   padding-left: 15px;
-  padding-top: 10px;
-  padding-bottom: 10px;
   padding-right: 15px;
   font-size: 16px;
   color: #aaaaaa;
